Update main.tex for v1.0.6 final

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,11 +1,18 @@
-\section*{Theory FZ: Theory of Nothing}
+\title{FZ Theory: Theory of Nothing}
 
-\subsection*{Abstract}
+\author{DarwinUroborovich}
 
+\date{2025} 
+
+\begin{document}
+
+\maketitle
+
+\begin{abstract}
 FZ Theory (also known as the Theory of Nothing) is a conceptual framework explaining how existence could emerge from a state of absolute nothingness, given infinite ``time of nothingness'' and an unbounded set of possibilities. It postulates that infinite nothingness, combined with a non-metric infinite process of trials, will inevitably produce every possible configuration of reality at least once. Among these random fluctuations, only stable worlds (self-consistent systems of physical laws and structures) persist, while unstable configurations collapse back into nonexistence. Crucially, FZ Theory asserts the necessity of a conscious observer arising simultaneously with a stable world, since consciousness is required to define and perceive that world’s boundaries. This initial world and its accompanying consciousness form a kind of primordial being or framework, within which subsequent nested realities can develop—each new level acquiring a more concrete structure (a process termed ``condensation'' of reality). This work lays out the axiomatic foundations of FZ Theory, describes the mechanism of world formation from nothing, and presents results of computer simulations (six unit tests) that support the internal consistency of the theory. The theory is analyzed for logical coherence and compared with known scientific principles, demonstrating no contradictions with established physical laws while offering a novel perspective on cosmogenesis.
+\end{abstract}
 
-\section*{Introduction}
-
+\section{Introduction}
 The question of how something can arise from nothing has preoccupied philosophers and scientists for centuries. Traditional cosmology usually assumes an initial singularity or a quantum fluctuation; however, FZ Theory offers a different approach by postulating an initial state of absolute nothingness existing for an infinitely long duration. Instead of invoking pre-existing laws or a divine creator, this theory suggests that given an infinitely long ``time of nothingness,'' even the most improbable events (including the spontaneous emergence of a universe) will eventually occur. In an infinite void, where ``nothingness'' has no physical properties (zero energy, no matter, no space or time), its very boundlessness over ``time'' provides the arena for random occurrences.
 
 FZ Theory rests on a set of fundamental assumptions (axioms) and leads to a scenario in which the Universe (and possibly a multitude of universes) can emerge spontaneously from nonexistence. A key element is the role of consciousness: according to the theory, for a world to realize (to attain definite existence and boundaries), a form of consciousness capable of observing it must emerge at the same time. This approach inextricably links the appearance of the physical world with the appearance of an observer, implying that reality and consciousness are two sides of the same creative act.
@@ -261,6 +268,10 @@ The author acknowledges the role of personal life experience, which made it poss
 \section*{Data \& Code Availability}
 
 All code used for the computational verification of the FZ Theory (including numerical implementations of the core equations, unit tests, and demonstration scripts) is openly available in the public GitHub repository:
+
+A frozen, citable snapshot corresponding to version~1.0.6 is archived on Zenodo:
+
+\noindent\url{https://doi.org/10.5281/zenodo.17613144}
 
 \noindent\url{https://github.com/DarwinUroborovich/fz-theory.git}
 
